--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en" data-theme="ghb_light">
 
 <head>
 	<meta charset="utf-8" />
@@ -8,7 +8,7 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover" data-theme="skeleton">
+<body data-sveltekit-preload-data="hover">
 	<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
 </body>
 
