--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<meta name="description" content="Mapa Gymnázia Havlíčkův Brod">
+	<meta name="description" content="Navigace po prostorách Gymnázia Havlíčkův Brod">
 	<meta name="keywords" content="GHB, Gymnázium HB, Gymnázium Havlíčkův Brod">
 	<meta name="author" content="Vojtěch Voldřich">
 	<title>GHB nav</title>
