--- a/src/app.html
+++ b/src/app.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="cs" data-theme="">
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+		/>
+		<meta name="description" content="Navigace po prostorách Gymnázia Havlíčkův Brod" />
+		<meta name="keywords" content="GHB, Gymnázium HB, Gymnázium Havlíčkův Brod" />
+		<meta name="author" content="Vojtěch Voldřich" />
+		<title>GHB nav</title>
+		%sveltekit.head%
+	</head>
 
-<head>
-	<meta charset="UTF-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<meta name="description" content="Navigace po prostorách Gymnázia Havlíčkův Brod">
-	<meta name="keywords" content="GHB, Gymnázium HB, Gymnázium Havlíčkův Brod">
-	<meta name="author" content="Vojtěch Voldřich">
-	<title>GHB nav</title>
-	%sveltekit.head%
-</head>
-
-<body data-sveltekit-preload-data="hover">
-	<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
-</body>
-
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
+	</body>
 </html>
